--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "wolverineo250kr/yii2-pevnev-text-helper",
     "description": "Text helper based on Yii2 framework",
     "keywords": ["yii", "module"],
+    "icense": "MIT",
     "minimum-stability": "stable",
     "authors": [
         {
